Fix horizontal scrollbar.

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -5,6 +5,7 @@ body {
 
 body::-webkit-scrollbar {
 	width: 0.25rem;
+	height: 0.25rem;
 }
 
 
